--- a/css/style.css
+++ b/css/style.css
@@ -1820,9 +1820,12 @@ input[type=submit] {
         border-top: 0px;
     }
 
-    .mobileheader-flex {
-        /* display: flex; */
+    /* .mobileheader-flex {
         gap: 20px;
+    } */
+
+    .mobileheader-flex {
+        display: inline-flex;
     }
 
     .top-heading-slider {
@@ -1874,6 +1877,38 @@ input[type=submit] {
         font-weight: 400;
     }
 
+    .navbarmenu {
+        display: flex;
+        gap: 10rem;
+        padding: 0 0 10px 0;
+    }
+
+    .navbar-copy-navbar ul li {
+        list-style: none;
+        padding: 5px;
+    }
+
+    .primary-menu h4 {
+        font-family: 'RageItalic';
+        color: #ed2328;
+        font-size: 10rem;
+        border-bottom: 2px solid tomato;
+    }
+
+    .navbar-copy-navbar ul li a {
+        font-size: 5rem;
+        text-decoration: none;
+        color: #000;
+        font-weight: 500;
+        transition: all .5s;
+    }
+
+    .navbar-copy-navbar ul li a:hover {
+        color: #0973BA;
+        padding: 3px;
+        background-color: #fed200;
+    }
+
     .dropdown-contentShopAll-mobile a {
         color: #000;
         padding: 1.2rem 1.6rem;
@@ -1893,9 +1928,9 @@ input[type=submit] {
         right: 31rem;
     }
 
-    .mobileheader-flex {
+    /* .mobileheader-flex {
         display: block;
-    }
+    } */
 
     .navbar-copy-navbar .select {
         border: 1px solid black;
