--- a/css/slick.css
+++ b/css/slick.css
@@ -2,7 +2,7 @@
 .slick-slider {
     position: relative;
 
-    display: block;
+    /* display: block; */
 
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -22,7 +22,7 @@
 .slick-list {
     position: relative;
 
-    display: block;
+    /* display: block; */
     overflow: hidden;
 
     margin: 0;
